2008-07-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/AssemblyNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/DomReturnTypeNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/DomFieldNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs: Worked on code
	  completion/new dom.

2008-07-17  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.AssemblyBrowser.AssemblyBrowserWidget.cs,
	  MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Worked on
	  documentation view.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs: some dom
	  changes.

2008-07-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs: API
	  change.

2008-06-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.AssemblyBrowser.Dom/DomCecilCompilationUnit.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilMethod.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilParameter.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilType.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilEvent.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilReturnType.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilField.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilAttribute.cs,
	  MonoDevelop.AssemblyBrowser.Dom/DomCecilProperty.cs,
	  MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/ModuleReferenceNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/Decompiler.cs,
	  MonoDevelop.AssemblyBrowser/BaseTypeFolderNodeBuilder.cs,
	  MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs,
	  MonoDevelop.AssemblyBrowser/AssemblyNodeBuilder.cs,